apps/base/byparr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: byparr
  namespace: byparr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: ${ddns_target}
spec:
  ingressClassName: traefik
  rules:
    - host: byparr.${base_domain}
      http:
        paths:
          - backend:
              service:
                name: byparr
                port:
                  number: 8191
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - byparr.${base_domain}
      secretName: byparr-tls
